--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 <h1 class="text-center" style="margin-top: 28px;">A N I M A L S</h1>
 <div class="container">
-    <div class="row justify-content-center" style="margin-top: 32px;">
-        <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+    <div class="row justify-content-center" style="margin-top: 32px; row-gap: 32px;">
+        <div class="col-lg-3 col-md-6 col-sm-12" style>
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1587213128862-80345e23a71a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80" alt="Pig" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a pig.</p>
@@ -21,7 +21,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1564851375740-1052e619dcbc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Goose" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a goose.</p>
@@ -29,7 +29,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1563409236302-8442b5e644df?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80" alt="Duck" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a duck.</p>
@@ -37,7 +37,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1578051696754-4652a8f67882?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=626&q=80" alt="Chicken" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a chicken.</p>
@@ -45,9 +45,9 @@
               </div>
         </div>
     </div>
-    <div class="row justify-content-center" style="margin-top: 32px;">
+    <div class="row justify-content-center" style="margin-top: 32px; row-gap: 32px;">
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1549366021-9f761d450615?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=706&q=80" alt="Elephant" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is an elephant.</p>
@@ -55,7 +55,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1563443803769-a5c44bd91e39?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Horse" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a horse.</p>
@@ -63,7 +63,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1564085352725-08da0272627d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Cow" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This a cow.</p>
@@ -71,7 +71,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1603966474815-85d21585ffb9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=685&q=80" alt="Card image cap" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a buffalo.</p>
@@ -79,9 +79,9 @@
               </div>
         </div>
     </div>
-    <div class="row justify-content-center" style="margin-top: 32px;">
+    <div class="row justify-content-center" style="margin-top: 32px; row-gap: 32px;">
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1590013330451-3946e83e0392?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Jellyfish" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a jellyfish.</p>
@@ -89,7 +89,7 @@
               </div>
         </div>  
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1591025207163-942350e47db2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Turtle" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a turtle.</p>
@@ -97,7 +97,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1540202404-b2979d19ed37?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=627&q=80" alt="Whale shark" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a whale shark.</p>
@@ -105,7 +105,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1658188920091-8d38c64bcb79?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80" alt="Blue whale" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a blue whale.</p>
@@ -113,9 +113,9 @@
               </div>
         </div>
     </div>
-     <div class="row justify-content-center" style="margin-top: 32px;">
+     <div class="row justify-content-center" style="margin-top: 32px; row-gap: 32px;">
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1522069169874-c58ec4b76be5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=712&q=80" alt="Gold fish" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a gold fish.</p>
@@ -123,7 +123,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1544943910-4c1dc44aab44?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=694&q=80" alt="Betta fish" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a betta fish.</p>
@@ -131,7 +131,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1616992783531-310c4cf5460d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Koi fish" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a koi fish.</p>
@@ -139,7 +139,7 @@
               </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 img-sm-center">
-            <div class="card" style="width: 18rem;">
+            <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1557053503-0c252e5c8093?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=726&q=80" alt="Puffer fish" width="304" height="400">
                 <div class="card-body">
                   <p class="card-text">This is a puffer fish.</p>
