--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
               </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 img-sm-center">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card w-100" style="width: 100%;">
                 <img class="card-img-top" src="https://images.unsplash.com/photo-1557053503-0c252e5c8093?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=726&q=80" alt="Puffer fish" width="304" height="400">
                 <div class="card-body">
